--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PWA Harry Potter</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/icon-192x192.png">
-  <meta name="theme-color" content="#2a2a2a">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Harry Potter PWA</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#000">
+  <link rel="icon" href="icons/icon-192x192.png" />
 </head>
 <body>
-  <h1>Personajes de Harry Potter</h1>
-  <div id="characters"></div>
+  <header>
+    <h1>Hogwarts Characters</h1>
+    <nav>
+      <button data-house="Gryffindor">Gryffindor</button>
+      <button data-house="Slytherin">Slytherin</button>
+      <button data-house="Ravenclaw">Ravenclaw</button>
+      <button data-house="Hufflepuff">Hufflepuff</button>
+    </nav>
+  </header>
+
+  <main>
+    <div id="characters" class="characters-grid"></div>
+  </main>
 
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(reg => console.log('Service Worker registrado', reg))
-        .catch(err => console.error('Error al registrar', err));
+      navigator.serviceWorker.register('sw.js');
     }
   </script>
 </body>
