--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
   </main>
 
   <script src="script.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js');
-    }
-  </script>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+      .then(reg => console.log('SW registrado'))
+      .catch(err => console.error('Error al registrar SW', err));
+  }
+</script>
+
 </body>
 </html>
